samples/_failures_safe/1761394652_3e5133_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1f90a3f.c: In function ‘main’:
./samples/SAFE/__tmp_d1f90a3f.c:154:28: error: missing terminating " character
  154 |                     printf("Error
      |                            ^~~~~~
./samples/SAFE/__tmp_d1f90a3f.c:154:21: error: expected expression at end of input
  154 |                     printf("Error
      |                     ^~~~~~
./samples/SAFE/__tmp_d1f90a3f.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d1f90a3f.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d1f90a3f.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d1f90a3f.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d1f90a3f.c:154:21: error: expected declaration or statement at end of input
